; ModuleID = '/home/carl/AnghaBench/libevent/extr_evdns.c_evdns_server_request_add_cname_reply.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_evdns.c_evdns_server_request_add_cname_reply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evdns_server_request = type { i32 }

@EVDNS_ANSWER_SECTION = common dso_local global i32 0, align 4
@TYPE_CNAME = common dso_local global i32 0, align 4
@CLASS_INET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @evdns_server_request_add_cname_reply(%struct.evdns_server_request* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.evdns_server_request*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.evdns_server_request* %0, %struct.evdns_server_request** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.evdns_server_request*, %struct.evdns_server_request** %5, align 8
  %10 = load i32, i32* @EVDNS_ANSWER_SECTION, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = load i32, i32* @TYPE_CNAME, align 4
  %13 = load i32, i32* @CLASS_INET, align 4
  %14 = load i32, i32* %8, align 4
  %15 = load i8*, i8** %7, align 8
  %16 = call i32 @evdns_server_request_add_reply(%struct.evdns_server_request* %9, i32 %10, i8* %11, i32 %12, i32 %13, i32 %14, i32 -1, i32 1, i8* %15)
  ret i32 %16
}

declare dso_local i32 @evdns_server_request_add_reply(%struct.evdns_server_request*, i32, i8*, i32, i32, i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
